# vec2text

./: README.md  environment.yaml  main.py  pyproject.toml  readme.md  requirements.txt
notebooks/: plots.ipynb
notebooks/data/: tab2.csv
runs/: attack_quant_small.yaml
scripts/: gtr_example_inference.py  inference.py  inversion_attacks.py  reproduce_evaluation.py  reproduce_experiments.py
src/: config.py  inference_model.py  measures.py  quantization.py  utils.py  vec2text_measures.py
