[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["anon"]

[tool.poetry.dependencies]
python = "^3.11"
vec2text = "^0.0.12"
wandb = "^0.18.6"
tiktoken = "^0.8.0"
seaborn = "^0.13.2"
beir = "^2.1.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
mypy = "^1.11.2"
ipython = "^8.27.0"
pre-commit = "^3.8.0"
types-pyyaml = "^6.0.12.20240917"
flake8 = "^7.1.1"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"
poetry2conda = "^0.3.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = ['.git', '__pycache__', '.venv']
max_line_length = 99
max_doc_length = 99
max-complexity = 18
pep585-activation = "always"
[tool.black]
line-length = 99
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.isort]
profile = "black"
skip = ["conftest.py", ".git", "__pycache__", ".venv"]
[tool.mypy]
files = "vec2text-repro/**/*.py"
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
strict_equality = true
[[tool.mypy.overrides]]
module = [
  "scipy.*",
  "transformers.*",
  "torch.*",
  "torchvision.*",
  "numpy.*",
  "pandas.*",
  "sklearn.*",
  "gensim.*",
  "nltk.*",
  "spacy.*",
  "matplotlib.*",
  "seaborn.*",
  "vec2text.*",
  "datasets.*",
  "evaluate.*",
]
ignore_missing_imports = true
# Put dependencie's name here if mypy fails to import stubs
